<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_movie_title_here"/>

    <TextView
        android:id="@+id/textViewGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre" />

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_genre_here" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year_of_release_here" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating" />

    <Spinner
        android:id="@+id/spnRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_list"
            android:layout_margin="8dp"/>

    </LinearLayout>

</LinearLayout>